test(benchmark): judge retrieval quality with RAGUnit (#176)
* test(benchmark): judge retrieval quality with RAGUnit instead of a hand-rolled prompt

The chunking benchmark already had a judge: a system prompt in this repository,
driven through LangChain4j AiServices. It works, but its prompt is a string nobody
versions, and a surprising score cannot be audited — the prompt sent and the raw
answer are gone by the time the result is written.

RAGUnit is added in test scope, pinned to v0.2.1 exactly: the judge prompt is a
public versioned constant on its side, and the result carries the prompt and the raw
response. Both judges now sit behind ContextJudge and share ContextPreparation, so
they see the same shuffled, truncated context — a comparison between them measures
the judge, not the preparation. Every result line records which judge produced it.

The hand-rolled judge stays the default so the history since May 2026 keeps its
meaning; -Pbenchmark.judge.impl=ragunit selects the other one.

JudgedAnswerTest proves the chain end to end against a local Ollama: an exact
contains() check runs before any model call, the judged assertion averages two runs
and rejects an unstable judge, and the failure path is asserted to carry the judge's
reasoning:

  Faithfulness score 0.0 is below threshold 0.7 — judge justification:
  "The provided answer does not accurately reflect the context of the
   HybridRetriever class."

It skips when Ollama is unreachable, so the suite stays runnable without a model.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>

* test(benchmark): give the RAGUnit judge time to answer

The first full run with the RAGUnit judge timed out on 51 calls out of 60: its
request timeout was a private constant fixed at 60 seconds, and a 14B judge
answering a faithfulness query on this machine needs more than that.

baretto-labs/ragunit#1 made the timeout configurable and is merged, so the
dependency moves to that commit and the judge now asks for